other-vpol/require-emptydir-requests-limits/.kyverno-test/resource-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-pod
spec:
  containers:
    - image: gcr.io/hello-world:1.0
      name: test
      resources: {}
      volumeMounts:
        - mountPath: /cache/data
          name: vol
  volumes:
    - name: vol
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-emptydir
spec:
  containers:
  - name: test
    image: busybox
    volumeMounts:
    - name: vol
      mountPath: /cache
  volumes:
  - name: vol
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-emptydir-wrong-token
spec:
  containers:
  - name: test
    image: busybox
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /cache
  volumes:
  - name: vol
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-emptydir-sibling-name
spec:
  containers:
  - name: test
    image: busybox
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /cache
  volumes:
  - name: vol
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-emptydir-sibling-volume
spec:
  containers:
  - name: test
    image: busybox
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /cache
    - name: other
      mountPath: /other
  volumes:
  - name: vol
    emptyDir: {}
  - name: other
    emptyDir: {}
