other-vpol/require-emptydir-requests-limits/require-emptydir-requests-limits.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-emptydir-requests-and-limits
  annotations:
    policies.kyverno.io/title: Require Requests and Limits for emptyDir in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.12.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pods which mount emptyDir volumes may be allowed to potentially overrun
      the medium backing the emptyDir volume. This sample ensures that any
      initContainers or containers mounting an emptyDir volume have
      ephemeral-storage requests and limits set. Policy will be skipped if
      the volume has already a sizeLimit set.
spec:
  evaluation:
    background:
      enabled: false
  validationActions: 
    - Audit
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  matchConditions:
    - name: has-emptydir-volume
      expression: "object.spec.?volumes.orValue([]).exists(volume, has(volume.emptyDir))"
  variables:
    - name: containers
      expression: "object.spec.containers + object.spec.?initContainers.orValue([])"
    - name: emptydirnames
      expression: >-
        object.spec.volumes.orValue([]).filter(volume, has(volume.emptyDir) && !has(volume.emptyDir.sizeLimit)).map(volume, volume.name)
  validations:
    - expression: >-
        variables.containers.all(container,
        !container.?volumeMounts.orValue([]).exists(mount, mount.name in variables.emptydirnames && !exceptions.allowedValues.exists(value, value == 'emptyDir:' + mount.name)) ||
        container.resources.?requests[?'ephemeral-storage'].hasValue() &&
        container.resources.?limits[?'ephemeral-storage'].hasValue())
      message: Containers mounting emptyDir volumes must specify requests and limits for ephemeral-storage.
