other-vpol/require-emptydir-requests-limits/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-emptydir-requests-and-limits
policies:
- ../require-emptydir-requests-limits.yaml
resources:
- resource-fail.yaml
- resource-pass.yaml
- resource-skip.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - fail-pod
  - exception-emptydir-wrong-token
  - exception-emptydir-sibling-name
  - exception-emptydir-sibling-volume
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - pass-pod-01
  - pass-pod-02
  - exception-emptydir
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: require-emptydir-requests-and-limits
  resources:
  - skip-pod
  result: skip
